started popup.html content

--- a/src/popup.html
+++ b/src/popup.html
@@ -1,1 +1,21 @@
-dogify
+<!DOCTYPE html>
+<html lang="en" dir="ltr">
+  <head>
+    <meta charset="utf-8">
+    <title>Dogify</title>
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@500&display=swap" rel="stylesheet">
+  </head>
+  <body style="font-family: 'Noto Sans JP', sans-serif;">
+    <img src="img/dogify.svg" alt="Dogify Logo" title="Help Dogify the web!" style="width: 200px; float: left;"/>
+    <h1 style="float: left; margin-left: 5%; margin-top: 70px; margin-bottom: 100px;"><strong>Dogify</strong>
+      <br>
+      <span style="font-size: 20px; font-weight: normal;">Help Dogify the Web!</span></h1>
+    <table style="background-color: #ededed; border-radius: 5px; border: 1px solid #8e8e8e; color: #8e8e8e; margin: 0 auto; width: 90%; text-align: center; clear: both; min-height: 50px;">
+      <tr>
+        <td><input type="checkbox" id="cat-replace" style="margin-left: 40px;" checked>
+        <td>Replace instances of "cat" with "dog"
+      </tr>
+    </table>
+  </body>
+</html>
