i did a lot, idk how to summarize it

--- a/src/popup.html
+++ b/src/popup.html
@@ -6,16 +6,19 @@
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@500&display=swap" rel="stylesheet">
   </head>
-  <body style="font-family: 'Noto Sans JP', sans-serif;">
-    <img src="img/dogify.svg" alt="Dogify Logo" title="Help Dogify the web!" style="width: 200px; float: left;"/>
-    <h1 style="float: left; margin-left: 5%; margin-top: 70px; margin-bottom: 100px;"><strong>Dogify</strong>
-      <br>
-      <span style="font-size: 20px; font-weight: normal;">Help Dogify the Web!</span></h1>
-    <table style="background-color: #ededed; border-radius: 5px; border: 1px solid #8e8e8e; color: #8e8e8e; margin: 0 auto; width: 90%; text-align: center; clear: both; min-height: 50px;">
+  <body style="font-family: 'Noto Sans JP', sans-serif; min-width: 600px;">
+    <div style="margin: 0 auto;">
+      <img src="img/dogify.svg" alt="Dogify Logo" title="Help Dogify the web!" style="width: 200px; float: left; margin-left: 5%;"/>
+      <h1 style="float: left; margin-left: 5%; margin-top: 70px; margin-bottom: 100px;"><strong>Dogify</strong>
+        <br>
+        <span style="font-size: 20px; font-weight: normal;">Help Dogify the Web!</span></h1>
+    </div>
+    <table style="background-color: #FFFFFF; border-radius: 5px; border: 2px solid #000000; color: #000000; margin: 0 auto; width: 60%; text-align: center; clear: both; min-height: 50px; margin-bottom: 30px;">
       <tr>
         <td><input type="checkbox" id="cat-replace" style="margin-left: 40px;" checked>
         <td>Replace instances of "cat" with "dog"
       </tr>
     </table>
+    <p style="text-align: center;">Have a question, or found a bug? Open an issue on <a href="https://github.com/liamhtml/dogify/" title="github" style="color: black;">GitHub</a>!</p>
   </body>
 </html>
