I made it so that the checkbox now toggles some scripts on and off! For now they're just placeholders.

--- a/src/popup.html
+++ b/src/popup.html
@@ -15,11 +15,11 @@
     </div>
     <table style="background-color: #FFFFFF; border-radius: 5px; border: 2px solid #000000; color: #000000; margin: 0 auto; width: 60%; text-align: center; clear: both; min-height: 50px; margin-bottom: 30px;">
       <tr>
-        <td><input type="checkbox" id="option1" style="margin-left: 20px;" onclick="toggleOption1()" checked>
+        <td><input type="checkbox" id="option1" style="margin-left: 20px;" checked>
         <td>Replace instances of "cat" with "dog"
       </tr>
     </table>
-    <p style="text-align: center;">Have a question, or found a bug? Open an issue on <a href="https://github.com/liamhtml/dogify/" title="github" style="color: black;">GitHub</a>!</p>
+    <p style="text-align: center;">Have a question, or found a bug? Open an issue on <a href="https://github.com/liamhtml/dogify/" target="_blank" title="Dogify - GitHub" style="color: black;">GitHub</a>!</p>
     <script src="popup.js"></script>
   </body>
 </html>
