--- a/src/chrome/dogify/popup.html
+++ b/src/chrome/dogify/popup.html
@@ -5,6 +5,68 @@
     <title>Dogify</title>
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@500&display=swap" rel="stylesheet">
+    <style>
+        /* Switch checkbox style by W3Schools */
+        .switch {
+          position: relative;
+          display: inline-block;
+          width: 60px;
+          height: 34px;
+        }
+
+        .switch input {
+          opacity: 0;
+          width: 0;
+          height: 0;
+        }
+
+        .slider {
+          position: absolute;
+          cursor: pointer;
+          top: 0;
+          left: 0;
+          right: 0;
+          bottom: 0;
+          background-color: #ccc;
+          -webkit-transition: .4s;
+          transition: .4s;
+        }
+
+        .slider:before {
+          position: absolute;
+          content: "";
+          height: 26px;
+          width: 26px;
+          left: 4px;
+          bottom: 4px;
+          background-color: white;
+          -webkit-transition: .4s;
+          transition: .4s;
+        }
+
+        input:checked + .slider {
+          background-color: #010101;
+        }
+
+        input:focus + .slider {
+          box-shadow: 0 0 1px #2196F3;
+        }
+
+        input:checked + .slider:before {
+          -webkit-transform: translateX(26px);
+          -ms-transform: translateX(26px);
+          transform: translateX(26px);
+        }
+
+        /* Rounded sliders */
+        .slider.round {
+          border-radius: 34px;
+        }
+
+        .slider.round:before {
+          border-radius: 50%;
+        }
+    </style>
   </head>
   <body style="font-family: 'Noto Sans JP', sans-serif; min-width: 600px;">
     <div style="margin: 0 auto;">
@@ -15,7 +77,11 @@
     </div>
     <table style="background-color: #FFFFFF; border-radius: 5px; border: 2px solid #000000; color: #000000; margin: 0 auto; width: 60%; text-align: center; clear: both; min-height: 50px; margin-bottom: 30px;">
       <tr>
-        <td><input type="checkbox" id="option1" style="margin-left: 20px;" checked>
+        <td>
+          <label class="switch">
+            <input type="checkbox" id="option1">
+            <span class="slider round"></span>
+          </label>
         <td>Replace instances of "cat" with "dog"
       </tr>
     </table>
