--- a/src/chrome/dogify/popup.html
+++ b/src/chrome/dogify/popup.html
@@ -12,6 +12,7 @@
           display: inline-block;
           width: 60px;
           height: 34px;
+          margin-left: 10px;
         }
 
         .switch input {
@@ -75,11 +76,11 @@
         <br>
         <span style="font-size: 20px; font-weight: normal;">Help Dogify the Web!</span></h1>
     </div>
-    <table style="background-color: #FFFFFF; border-radius: 5px; border: 2px solid #000000; color: #000000; margin: 0 auto; width: 60%; text-align: center; clear: both; min-height: 50px; margin-bottom: 30px;">
+    <table style="background-color: #FFFFFF; border-radius: 5px; border: 2px solid #000000; color: #000000; margin: 0 auto; width: 65%; text-align: center; clear: both; min-height: 50px; margin-bottom: 30px;">
       <tr>
         <td>
           <label class="switch">
-            <input type="checkbox" id="option1">
+            <input type="checkbox" id="option1" checked>
             <span class="slider round"></span>
           </label>
         <td>Replace instances of "cat" with "dog"
