adjusted button styling

--- a/src/chrome/dogify/popup.html
+++ b/src/chrome/dogify/popup.html
@@ -78,12 +78,12 @@
     </div>
     <table style="background-color: #FFFFFF; border-radius: 5px; border: 2px solid #000000; color: #000000; margin: 0 auto; width: 55%; text-align: center; clear: both; min-height: 50px; margin-bottom: 30px;">
       <tr>
-        <td>
+        <td style="padding-top: 10px; padding-bottom: 10px; padding-left: 10px;">
           <label class="switch">
             <input type="checkbox" id="option1" checked>
             <span class="slider round"></span>
           </label>
-        <td>Replace instances of "cat" with "dog"
+        <td style="vertical-align: middle;">Replace instances of "cat" with "dog"
       </tr>
     </table>
     <p style="text-align: center;">Have a question, or found a bug? Open an issue on <a href="https://github.com/liamhtml/dogify/" target="_blank" title="Dogify - GitHub" style="color: black;">GitHub</a>!</p>
